<resources>
    <string name="app_name">CVIA</string>
    <string name="labelVentas">Buscar:</string>
    <string name="btnBuscarArticuloVentas">Añadir</string>
    <string name="txtBuscarArticulo">Ingrese el ID del artículo</string>
    <string name="btnRegresarInicio">Regresar al Inicio</string>
    <string name="btnVender">Realizar Venta</string>
    <string name="labelBuscar">Buscar:</string>
    <string name="txtBuscarArticuloVendido">Buscar artículo vendido</string>
    <string name="btnBuscarArticuloVendido">Buscar</string>
    <string name="btnRegresar">Volver al Inicio</string>
    <string name="btnRealizarVenta">Realizar Venta</string>
    <string name="btnVerInventario">VEr Inventario</string>
    <string name="btnModificarInventario">Modificar/Agregar</string>
    <string name="btnHitorialVentas">Ver Historial de Ventas</string>
    <string name="modelo">ID Artículo</string>
    <string name="nombre">Nombre</string>
    <string name="precio">Precio</string>
    <string name="descripcion">Descripcion</string>
    <string name="existencia">Existencia</string>
    <string name="proveedor">Proveedor</string>
    <string name="btnInsertar">Insertar Nuevo</string>
    <string name="btnModificarI">Modificar producto</string>
    <string name="TituloLogin">INICIO DE SESIÓN</string>
    <string name="txtUsuario">Ingrese el Usuario</string>
    <string name="txtContraseña">Contraseña</string>
    <string name="btnLogin">INGRESAR</string>
    <string name="Descripcion">IconoApp</string>
    <string name="VerInventario">Inventario Existente</string>
    <string name="contenidoVenta">Datos</string>

    <string name="fecha">Fecha formato dd/mm/yyyy</string>
    <string name="monto">Monto</string>
    <string name="id_articulo">Id_Articulo</string>


</resources>