<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuActivity">

    <Button
        android:id="@+id/historialVentas"
        android:layout_width="400dp"
        android:layout_height="68sp"
        android:layout_marginTop="576dp"
        android:text="@string/btnHitorialVentas"
        android:fontFamily="casual"
        android:textSize="24sp"
        app:backgroundTint="#605D5D"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/modificarInventario"
        android:layout_width="400dp"
        android:layout_height="68dp"
        android:layout_marginTop="472dp"
        android:text="@string/btnModificarInventario"
        android:fontFamily="casual"
        android:textSize="24sp"
        app:backgroundTint="#605D5D"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/realizarVenta"
        android:layout_width="400dp"
        android:layout_height="68dp"
        android:layout_marginTop="284dp"
        android:text="@string/btnRealizarVenta"
        android:fontFamily="casual"
        android:textSize="24sp"
        app:backgroundTint="#605D5D"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/verInventario"
        android:layout_width="400dp"
        android:layout_height="68dp"
        android:layout_marginTop="376dp"
        android:text="@string/btnVerInventario"
        android:fontFamily="casual"
        android:textSize="24sp"
        app:backgroundTint="#605D5D"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>